seperated auth functions from user functions
