# core/authentication/auth/models.go
@@ -1,5 +1,10 @@
 package auth
 
+import (
+	"time"
+	"vezhguesi/core/users"
+)
+
 type LoginRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
@@ -38,4 +43,68 @@ type ResetPasswordRequest struct {
 type OAuthLoginRequest struct {
 	Provider string `json:"provider"`
 	Token    string `json:"token"`
+}
+
+type SignupRequest struct {
+	Email           string `json:"email"`
+	Username        string `json:"username"`
+	FirstName       string `json:"firstName"`
+	LastName        string `json:"lastName"`
+	Password        string `json:"password"`
+	ConfirmPassword string `json:"confirmPassword"`
+}
+
+type SignupResponse struct {
+	ID     int    `json:"id"`
+	Status string `json:"status"`
+}
+
+type SignupVerifyRequest struct {
+	Token string `json:"-"`
+}
+type PasswordUpdateRequest struct {
+	UserID             int    `json:"-"`
+	// Mode               string `json:"mode"`
+	CurrentPassword    string `json:"currentPassword"`
+	NewPassword        string `json:"newPassword"`
+	ConfirmNewPassword string `json:"confirmNewPassword"`
+}
+
+type EmailUpdateRequest struct {
+	UserID   int    `json:"-"`
+	NewEmail string `json:"newEmail"`
+}
+
+type FindRequest struct {
+	UserID int `json:"-"`
+}
+
+type FindResponse struct {
+	Users []users.User `json:"users"`
+}
+
+
+type UserRequest struct {
+	UserID    int    `json:"-"`
+	Username  string `json:"username"`
+	Email     string `json:"email"`
+	FirstName string `json:"firstName"`
+	LastName  string `json:"lastName"`
+	Phone     string `json:"phone"`
+}
+
+type IDResponse struct {
+	ID int `json:"id"`
+}
+
+type UserResponse struct {
+	ID           int       `json:"id"`
+	FirstName    string    `json:"firstName"`
+	LastName     string    `json:"lastName"`
+	Username     string    `json:"username"`
+	Email        string    `json:"email"`
+	Status       string    `json:"status"`
+	AvatarImgKey string    `json:"avatarImgUrl"`
+	CreatedAt    time.Time `json:"createdAt"`
+	UpdatedAt    time.Time `json:"updatedAt"`
 }
